--- a/agent_factory/requirements.txt
+++ b/agent_factory/requirements.txt
@@ -1,6 +1,8 @@
+fastapi>=0.111.0
 joblib>=1.3.2
 msal>=1.28.0
 pandas>=2.1.0
 pywin32>=306; platform_system == "Windows"
 requests>=2.31.0
 scikit-learn>=1.4.0
+uvicorn>=0.30.0
