--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 generated_agents/outlook_local_cache.json
+generated_agents/outlook_agent_learning.json
 .graph_token_cache.bin
 outlook_addin/certs/
